--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "restful-api",
   "version": "1.0.0",
   "description": "A RESTful API built with Node and Express.",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
